--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,7 @@ header nav {
 }
 
 .nav-left a {
-  color: #ff9f43;
+  color: orange;
   margin-right: 1rem;
   text-decoration: none;
   font-weight: bold;
@@ -56,9 +56,10 @@ header nav {
 .message {
   grid-column: 1;
   grid-row: 1;
-  background-color: #5c5c6c;
+  /*background-color: #5c5c6c;*/
   padding: 1rem;
   font-size: 1.2rem;
+  color: orangered;
 }
 
 .input-col {
@@ -107,7 +108,7 @@ header nav {
 }
 
 #resultScreen {
-  background-color: #332703;
+  background-color: black;
   color: #fff;
   width: 100%;
   min-height: 3rem;
